Fix page section spacing

--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 
 #hero {
-  width: 100vw;
+  //width: 100vw;
   height: 100vh;
   padding: 0 2em;
   display: flex;
