--- a/styles/pages/contact.scss
+++ b/styles/pages/contact.scss
@@ -1,6 +1,6 @@
 @import '../variables.scss';
 
-#contactFormWrapper {
+#contact {
   position: relative;
   display: flex;
   flex-direction: column;
